# broca

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_RECOMMENDATIONS.md  CHANGELOG.md  ENABLE_ISSUES_INSTRUCTIONS.md  INSTALL.md  ISSUES_CREATED_SUMMARY.md  LICENSE  LICENSE-DOCS  LICENSING.md  README.md  TEST_COVERAGE_SUMMARY.md  analyze_test_coverage.py  broca-2-plan.md  codebase-analysis.md  coverage.json  coverage_all.json  coverage_e2e.json  coverage_integration.json  coverage_unit.json  coverage_unit_detailed.json  main.py  pyproject.toml  pytest.ini  requirements-testing.txt  requirements.txt  run_tests.py  settings.json  telegram_ignore_list.json  test_coverage_report.txt  test_coverage_summary.json  test_discovery.py  test_main_discovery.py  test_retry.py  test_typed_config.py
broca/: .coverage  .env.example  .gitignore  main.py  pyproject.toml  pytest.ini  requirements.txt  settings.json  setup.py  tall letta-client  telegram_session_1234567890.json  workspace.code-workspace
broca/bak/: telegram_session_16893418448.json  test_agent.py
broca/bak/Legacy/: database.py  run_dashboard.py  sanctum_dashboard.py  telegram_chatgpt.py
broca/common/: __init__.py  config.py
broca/core/: config.py  letta_client.py  message.py  queue.py
broca/database/migrations/: 002_add_letta_block_id.py
broca/docs/: project_analysis.md
broca/static/: style.css
broca/telegram/: client.py  handlers.py
broca/templates/: __init__.py  base.html  conversations.html  dashboard.html  queue.html  settings.html  users.html
broca/tests/: conftest.py
broca/web/: app.py
(+294 files in other folders)
